fix: overflow, sizes, keys

--- a/src/components/mailing/how-to-mailing/how-to-mailing.module.scss
+++ b/src/components/mailing/how-to-mailing/how-to-mailing.module.scss
@@ -4,15 +4,17 @@
 .howIt {
   @include max-size(100%, unset);
   @include flex(column, unset, unset, 20px);
-  @include indents(0 40px 40px, 0);
+  @include indents(0 40px 10px, 0);
   position: relative;
   background-color: $secondary-cultured-hover;
   border-radius: $xxl-border-radius;
 
   &__buttons {
-    @include flex(row, flex-start, center, 32px);
-    transition: height .3s linear;
+    @include flex(row, flex-start, flex-start, 32px);
+    row-gap: 16px;
+    transition: all .3s linear;
     flex-wrap: wrap;
+    overflow: hidden;
 
     button {
       flex-basis: 300px;
@@ -21,7 +23,7 @@
 
     &_visible {
       @media screen and (max-width: 820px) {
-        height: calc(76px*2 + 12px);
+        height: calc(76px*2 + 50px);
       }
     }
 
@@ -30,10 +32,6 @@
         height: 0;
       }
     }
-
-    /* @media screen and (max-width: 820px) {
-      @include flex(column, flex-start, center, 12px);
-    } */
   }
 
   &__hide {
